<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/text_view_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/jcaj"
        android:textColor="#FF0000"
        android:textSize="20sp" />

        <Button
            android:id="@+id/start_service"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_header"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:onClick="onClickStartServie"
            android:text="@string/as" />

    <Button
        android:id="@+id/stop_service"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_service"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:onClick="onClickStopService"
        android:text="@string/klfdjlnfdndnf" />

</RelativeLayout>